Added Markov Chain reference

--- a/lectures.html
+++ b/lectures.html
@@ -60,6 +60,7 @@
 	<li>Aden: <a href="notes/Lecture_02_Notes_Aden.md">md</a></li>
 	<li>Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a></li>
 	<li>Werner: <a href="notes/Lecture_04_Notes_Werner.tar.gz">tex</a>, <a href="notes/Lecture_04_Notes_Werner.pdf">pdf</a></li>
+        <li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -69,6 +70,7 @@
 	<li>Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a></li>
 	<li>Huang: <a href="notes/Lecture_03_Notes_Huang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Huang.pdf">pdf</a></li>
 	<li>Gao: <a href="notes/Lecture_04_Notes_Gao.tex">tex</a>, <a href="notes/Lecture_04_Notes_Gao.pdf">pdf</a></li>
+        <li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -78,6 +80,7 @@
     <li>Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a></li>
 	<li>Wang: <a href="notes/Lecture_03_Notes_Wang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Wang.pdf">pdf</a></li>
 	<li>Filshtein: <a href="notes/Lecture_04_Notes_Filshtein.tex">tex</a>, <a href="notes/Lecture_04_Notes_Filshtein.pdf">pdf</a></li>
+        <li>(Coming soon...)</li>
 </ul>
 </div>
 <br/><br/>
@@ -94,6 +97,8 @@
     <li><a href="http://www.people.fas.harvard.edu/~plam/teaching/methods/mcmc/mcmc.pdf">Patrick Lam's MCMC Overview</a></li>
     <li><a href="https://vpn.lib.ucdavis.edu/content/m28q35/,DanaInfo=www.springerlink.com+#section=59276&page=11&locus=51">Hoff, P.D. (2009) A First Course in Bayesian Statistical Methods (Ch 7: Multivariate Normal, Ch 10: Metropolis-Hastings)</a></li>
     <li><a href="http://www.mcmchandbook.net/HandbookChapter1.pdf">Geyer, C.J. (2011) Introduction to MCMC in The MCMC Handbook, Chapman and Hall/CRC.</a></li> 
+    <li><a href="http://www.dartmouth.edu/~chance/teaching_aids/books_articles/probability_book/Chapter11.pdf">Grinstead, C.M., Snell, J.L. (1997) Introduction to Probability (Ch 11: Markov Chains), American Mathematical Society.</a></li>
+<!--http://arxiv.org/pdf/math/0404033.pdf-->
 </ul>
 
 <p>Happy coding! :)</p>
