--- a/lectures.html
+++ b/lectures.html
@@ -50,7 +50,7 @@
     <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
     <li>Lecture 03</li>
     <li>Lecture 04</li>
-    <li><a href="http://sta250.github.io/Stuff/Lecture_05.pdf">Lecture 05</a></li>
+    <li>Lecture 05 <a href="Lecture_05.tex">tex</a>, <a href="Lecture_05.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
