--- a/lectures.html
+++ b/lectures.html
@@ -51,6 +51,7 @@
     <li>Lecture 03</li>
     <li>Lecture 04</li>
     <li>Lecture 05 <a href="Lecture_05.tex">tex</a>, <a href="Lecture_05.pdf">pdf</a></li>
+    <li>Lecture 06 <a href="Lecture_06.tex">tex</a>, <a href="Lecture_06.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -60,7 +61,8 @@
 	<li>Aden: <a href="notes/Lecture_02_Notes_Aden.md">md</a></li>
 	<li>Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a></li>
 	<li>Werner: <a href="notes/Lecture_04_Notes_Werner.tar.gz">tex</a>, <a href="notes/Lecture_04_Notes_Werner.pdf">pdf</a></li>
-        <li>(Coming soon...)</li>
+	<li>Bandyopadhyay: <a href="notes/Lecture_05_Notes_Bandyopadhyay.tex">tex</a>, <a href="notes/Lecture_05_Notes_Bandyopadhyay.pdf">pdf</a></li>
+    <li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -70,7 +72,8 @@
 	<li>Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a></li>
 	<li>Huang: <a href="notes/Lecture_03_Notes_Huang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Huang.pdf">pdf</a></li>
 	<li>Gao: <a href="notes/Lecture_04_Notes_Gao.tex">tex</a>, <a href="notes/Lecture_04_Notes_Gao.pdf">pdf</a></li>
-        <li>(Coming soon...)</li>
+	<li>Ulle: <a href="notes/Lecture_05_Notes_Ulle.tex">tex</a>, <a href="notes/Lecture_05_Notes_Ulle.pdf">pdf</a></li>
+    <li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -80,7 +83,8 @@
     <li>Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a></li>
 	<li>Wang: <a href="notes/Lecture_03_Notes_Wang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Wang.pdf">pdf</a></li>
 	<li>Filshtein: <a href="notes/Lecture_04_Notes_Filshtein.tex">tex</a>, <a href="notes/Lecture_04_Notes_Filshtein.pdf">pdf</a></li>
-        <li>(Coming soon...)</li>
+    <li>(Coming soon...)</li>
+    <li>(Coming soon...)</li>
 </ul>
 </div>
 <br/><br/>
