Added MathJax to plain

--- a/plain/Homework_01_plain.html
+++ b/plain/Homework_01_plain.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    </head>
   <body>
 
 <h1><a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>STA 250 :: Homework Policy</h1>
