--- a/lectures.html
+++ b/lectures.html
@@ -105,6 +105,12 @@
 <!--http://arxiv.org/pdf/math/0404033.pdf-->
 </ul>
 
+<p>Lecture 06 References (Bayes Lecture 3):</p>
+<ul>
+    <li><a href="http://www.stat.cmu.edu/~acthomas/724/Cook.pdf">Cook, S.R., Gelman, A., Rubin, D.B. (2006) Validation of Software for Bayesian Models Using Posterior Quantiles. Journal of Computational and Graphical Statistics, 15, 3, 675-692.</a></li> 
+    <li><a href="http://streaming.stat.iastate.edu/~stat444x_B/Literature/ChibGreenberg.pdf">Chib, S., Greenberg, E. (1995) Understanding the Metropolis-Hastings Algorithm. The American Statistician, 49, 4, 327-335.</a></li> 
+</ul>
+
 <p>Happy coding! :)</p>
       </section>
 
