--- a/homeworks.html
+++ b/homeworks.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <a href="http://sta250.github.io/Stuff"><h1>STA 250 :: Advanced Statistical Computing (UCD, Fall 2013)</h1></a>
+            <a href="http://sta250.github.io/Stuff"><h1>STA 250 :: Advanced Statistical Computing (UCD, Fall 2013)</h1></a>
           <p>Code + goodies used in Prof. Baines' STA 250 Course (UC Davis, Fall 2013)</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/STA250">STA250</a></span>
@@ -41,21 +41,11 @@
         <h1>
 <a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>Course Website</h1>
 
-<p>Welcome to STA 250!</p>
-
-<p>This is the course website, and main portal to code, slides and other materials used in Prof. Baines' STA 250 Course (UC Davis, Fall 2013)</p>
-
-<p>Links to various code snippets, data, notes etc. will be made available here throughout the course.</p>
-
-<p>Course code will be hosted on the <a href="https://github.com/STA250/">course GitHub repo</a>. The syllabus and lecture slides can be found here:</p>
+<p>STA 250 Homeworks</p>
 
 <ul>
-    <li><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></li>
-    <li><a href="https://github.com/STA250/Stuff/blob/master/Docs/Python_on_Windows.md">Python on Windows</a></li>
-    <li><a href="http://sta250.github.io/Stuff/sync_fork">Syncing a Forked GitHub Repo</a></li>
-    <li><a href="http://sta250.github.io/Stuff/lectures">Lecture Slides + Notes</a></li>
-    <li><a href="http://sta250.github.io/Stuff/practice_problems.html">Practice Problems</a></li>
-    <li><a href="http://sta250.github.io/Stuff/homeworks.html">Homeworks</a></li>
+	<li><a href="http://sta250.github.io/Stuff/Homework_00.html">Homework 00</a></li>
+	<li><a href="http://sta250.github.io/Stuff/Homework_01.html">Homework 01</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
