--- a/Homework_00.html
+++ b/Homework_00.html
@@ -125,8 +125,8 @@ git status # Should be up-to-date</code></pre>
 <pre><code>git add HW0/HW0.py</code></pre>
 or similar, depending on what your code file is called. This will add the file to the repo.<br /></li>
 <li><p>Next, commit the change to the repo (run this from the local repo directory):</p>
-<pre><code>git commit -m</code></pre>
-<p>Add a message for the update e.g., &quot;Added HW0 code&quot;. This stages the commit on your local machine, but the commit will not appear on GitHub.com until you push it to the site. If using the GUI you can commit via the &quot;Changes&quot; tab. In the &quot;Commit Summary&quot; box, enter a message for the update, then click &quot;Commit&quot;. The committed changes should appear in the &quot;Unsynced Commits&quot; tab.</p></li>
+<pre><code>git commit -a -m "Add a description of the changes you made."</code></pre>
+<p>Make sure to use a descriptive message for the update e.g., &quot;Added HW0 code&quot;. This stages the commit on your local machine, but the commit will not appear on GitHub.com until you push it to the site. If using the GUI you can commit via the &quot;Changes&quot; tab. In the &quot;Commit Summary&quot; box, enter a message for the update, then click &quot;Commit&quot;. The committed changes should appear in the &quot;Unsynced Commits&quot; tab.</p></li>
 <li><p>To push the change to GitHub, from the local repo directory:</p>
 <pre><code>git push </code></pre>
 <p>Using the GUI, push to GitHub using the &quot;Sync Branch&quot; button.</p></li>
