--- a/lectures.html
+++ b/lectures.html
@@ -62,7 +62,7 @@
 	<li>Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a></li>
 	<li>Werner: <a href="notes/Lecture_04_Notes_Werner.tar.gz">tex</a>, <a href="notes/Lecture_04_Notes_Werner.pdf">pdf</a></li>
 	<li>Bandyopadhyay: <a href="notes/Lecture_05_Notes_Bandyopadhyay.tex">tex</a>, <a href="notes/Lecture_05_Notes_Bandyopadhyay.pdf">pdf</a></li>
-    <li>(Coming soon...)</li>
+	<li>Meisner: <a href="notes/Lecture_06_Notes_Meisner.tex">tex</a>, <a href="notes/Lecture_06_Notes_Meisner.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -73,7 +73,7 @@
 	<li>Huang: <a href="notes/Lecture_03_Notes_Huang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Huang.pdf">pdf</a></li>
 	<li>Gao: <a href="notes/Lecture_04_Notes_Gao.tex">tex</a>, <a href="notes/Lecture_04_Notes_Gao.pdf">pdf</a></li>
 	<li>Ulle: <a href="notes/Lecture_05_Notes_Ulle.tex">tex</a>, <a href="notes/Lecture_05_Notes_Ulle.pdf">pdf</a></li>
-    <li>(Coming soon...)</li>
+	<li>Fan: <a href="notes/Lecture_06_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_06_Notes_Fan.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -83,7 +83,7 @@
     <li>Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a></li>
 	<li>Wang: <a href="notes/Lecture_03_Notes_Wang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Wang.pdf">pdf</a></li>
 	<li>Filshtein: <a href="notes/Lecture_04_Notes_Filshtein.tex">tex</a>, <a href="notes/Lecture_04_Notes_Filshtein.pdf">pdf</a></li>
-    <li>(Coming soon...)</li>
+    <li>(None)</li>
     <li>(Coming soon...)</li>
 </ul>
 </div>
