--- a/lectures.html
+++ b/lectures.html
@@ -50,8 +50,8 @@
     <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
     <li>Lecture 03</li>
     <li>Lecture 04</li>
-    <li>Lecture 05 <a href="Lecture_05.tex">tex</a>, <a href="Lecture_05.pdf">pdf</a></li>
-    <li>Lecture 06 <a href="Lecture_06.tex">tex</a>, <a href="Lecture_06.pdf">pdf</a></li>
+    <li><a href="Lecture_05.pdf">Lecture 05</a> <a href="Lecture_05.tex">(tex)</a></li>
+    <li><a href="Lecture_06.pdf">Lecture 06</a> <a href="Lecture_06.tex">(tex)</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
