--- a/lectures.html
+++ b/lectures.html
@@ -47,43 +47,55 @@
 <ul>
     <li>Slides</li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_01">Lecture 01 Slides</a></li>
+    <li><em>Boot Camp</em></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_02">Lecture 02 Slides</a></li>
     <li>Lecture 03</li>
+    <li><em>Bayes Module</em></li>
     <li>Lecture 04</li>
     <li><a href="Lecture_05.pdf">Lecture 05</a> <a href="Lecture_05.tex">(tex)</a></li>
     <li><a href="Lecture_06.pdf">Lecture 06</a> <a href="Lecture_06.tex">(tex)</a></li>
+    <li>Lecture 07</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
 <ul>
     <li>Notetaker 1</li>
 	<li>(No Notetaker)</li>
+    <li></li>
 	<li>Aden: <a href="notes/Lecture_02_Notes_Aden.md">md</a></li>
 	<li>Izyumin: <a href="notes/Lecture_03_Notes_Izyumin.tex">tex</a>, <a href="notes/Lecture_03_Notes_Izyumin.pdf">pdf</a></li>
+    <li></li>
 	<li>Werner: <a href="notes/Lecture_04_Notes_Werner.tar.gz">tex</a>, <a href="notes/Lecture_04_Notes_Werner.pdf">pdf</a></li>
 	<li>Rohosen: <a href="notes/Lecture_05_Notes_Bandyopadhyay.tex">tex</a>, <a href="notes/Lecture_05_Notes_Bandyopadhyay.pdf">pdf</a></li>
 	<li>Meisner: <a href="notes/Lecture_06_Notes_Meisner.tex">tex</a>, <a href="notes/Lecture_06_Notes_Meisner.pdf">pdf</a></li>
+	<li>Cai: <a href="notes/Lecture_07_Notes_Cai.tex">tex</a>, <a href="notes/Lecture_07_Notes_Cai.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
 <ul>
     <li>Notetaker 2</li>
 	<li>(No Notetaker)</li>
+    <li></li>
 	<li>Dai: <a href="notes/Lecture_02_Notes_Dai.tex">tex</a>, <a href="notes/Lecture_02_Notes_Dai.pdf">pdf</a></li>
 	<li>Huang: <a href="notes/Lecture_03_Notes_Huang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Huang.pdf">pdf</a></li>
+    <li></li>
 	<li>Gao: <a href="notes/Lecture_04_Notes_Gao.tex">tex</a>, <a href="notes/Lecture_04_Notes_Gao.pdf">pdf</a></li>
 	<li>Ulle: <a href="notes/Lecture_05_Notes_Ulle.tex">tex</a>, <a href="notes/Lecture_05_Notes_Ulle.pdf">pdf</a></li>
 	<li>Fan: <a href="notes/Lecture_06_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_06_Notes_Fan.pdf">pdf</a></li>
+	<li>Hsueh: <a href="notes/Lecture_07_Notes_Hsueh.tar.gz">tex</a>, <a href="notes/Lecture_07_Notes_Hsueh.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
 <ul>
     <li>Notetaker 3</li>
 	<li>(No Notetaker)</li>
+    <li></li>
     <li>Liu: <a href="notes/Lecture_02_Notes.tex">tex</a>, <a href="notes/Lecture_02_Notes_Liu.pdf">pdf</a></li>
 	<li>Wang: <a href="notes/Lecture_03_Notes_Wang.tex">tex</a>, <a href="notes/Lecture_03_Notes_Wang.pdf">pdf</a></li>
+    <li></li>
 	<li>Filshtein: <a href="notes/Lecture_04_Notes_Filshtein.tex">tex</a>, <a href="notes/Lecture_04_Notes_Filshtein.pdf">pdf</a></li>
     <li>(None)</li>
+    <li>(Coming soon...)</li>
     <li>(Coming soon...)</li>
 </ul>
 </div>
@@ -109,6 +121,12 @@
 <ul>
     <li><a href="http://www.stat.cmu.edu/~acthomas/724/Cook.pdf">Cook, S.R., Gelman, A., Rubin, D.B. (2006) Validation of Software for Bayesian Models Using Posterior Quantiles. Journal of Computational and Graphical Statistics, 15, 3, 675-692.</a></li> 
     <li><a href="http://streaming.stat.iastate.edu/~stat444x_B/Literature/ChibGreenberg.pdf">Chib, S., Greenberg, E. (1995) Understanding the Metropolis-Hastings Algorithm. The American Statistician, 49, 4, 327-335.</a></li> 
+</ul>
+
+<p>Lecture 07 References (Bayes Lecture 4):</p>
+<ul>
+    <li><a href="http://www2.warwick.ac.uk/fac/sci/statistics/staff/academic-research/latuszynski/aap1101-028r1a0.pdf">Latuszynski, K, Roberts, G.O., Rosenthal, J.S. (2011) Adaptive Gibbs samplers and related MCMC methods. Annals of Applied Probability, 23, 1, 66-98.</a></li> 
+    <li><a href="http://www.stat.umn.edu/geyer/f05/8931/c.pdf">Geyer, C.J. (1991) Markov Chain Monte Carlo Maximum Likelihood. Proceeding of the Interface.</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
