Added more lecture notes

--- a/lectures.html
+++ b/lectures.html
@@ -55,6 +55,8 @@
     <li><a href="Lecture_05.pdf">Lecture 05</a> <a href="Lecture_05.tex">(tex)</a></li>
     <li><a href="Lecture_06.pdf">Lecture 06</a> <a href="Lecture_06.tex">(tex)</a></li>
     <li>Lecture 07</li>
+    <li><em>Big Data Module</em></li>
+    <li><a href="http://sta250.github.io/Stuff/Lecture_08">Lecture 08 Slides</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -69,6 +71,8 @@
 	<li>Rohosen: <a href="notes/Lecture_05_Notes_Bandyopadhyay.tex">tex</a>, <a href="notes/Lecture_05_Notes_Bandyopadhyay.pdf">pdf</a></li>
 	<li>Meisner: <a href="notes/Lecture_06_Notes_Meisner.tex">tex</a>, <a href="notes/Lecture_06_Notes_Meisner.pdf">pdf</a></li>
 	<li>Cai: <a href="notes/Lecture_07_Notes_Cai.tex">tex</a>, <a href="notes/Lecture_07_Notes_Cai.pdf">pdf</a></li>
+    <li></li>
+    <li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -83,6 +87,8 @@
 	<li>Ulle: <a href="notes/Lecture_05_Notes_Ulle.tex">tex</a>, <a href="notes/Lecture_05_Notes_Ulle.pdf">pdf</a></li>
 	<li>Fan: <a href="notes/Lecture_06_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_06_Notes_Fan.pdf">pdf</a></li>
 	<li>Hsueh: <a href="notes/Lecture_07_Notes_Hsueh.tar.gz">tex</a>, <a href="notes/Lecture_07_Notes_Hsueh.pdf">pdf</a></li>
+    <li></li>
+    <li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -95,7 +101,9 @@
     <li></li>
 	<li>Filshtein: <a href="notes/Lecture_04_Notes_Filshtein.tex">tex</a>, <a href="notes/Lecture_04_Notes_Filshtein.pdf">pdf</a></li>
     <li>(None)</li>
-    <li>(Coming soon...)</li>
+    <li>(None)</li>
+	<li>Lee: <a href="notes/Lecture_07_Notes_Lee.tex">tex</a>, <a href="notes/Lecture_07_Notes_Lee.pdf">pdf</a></li>
+    <li></li>
     <li>(Coming soon...)</li>
 </ul>
 </div>
@@ -127,6 +135,12 @@
 <ul>
     <li><a href="http://www2.warwick.ac.uk/fac/sci/statistics/staff/academic-research/latuszynski/aap1101-028r1a0.pdf">Latuszynski, K, Roberts, G.O., Rosenthal, J.S. (2011) Adaptive Gibbs samplers and related MCMC methods. Annals of Applied Probability, 23, 1, 66-98.</a></li> 
     <li><a href="http://www.stat.umn.edu/geyer/f05/8931/c.pdf">Geyer, C.J. (1991) Markov Chain Monte Carlo Maximum Likelihood. Proceeding of the Interface.</a></li>
+</ul>
+
+<p>Lecture 08 References (Big Data Lecture 1):</p>
+<ul>
+    <li><a href="http://projecteuclid.org/euclid.aos/1176344552">Efron, B. (1979) Bootstrap Methods: Another Look at the Jackknife. The Annals of Statistics. 7, 1, 1-26.</a></li> 
+    <li><a href="http://arxiv.org/abs/1112.5016">Kleiner, A., Talwalkar, A., Sarkar, P., Jordan, M.I. (2011) A Scalable Bootstrap for Massive Data. arXiv: 1112.5016</a></li> 
 </ul>
 
 <p>Happy coding! :)</p>
