--- a/STA_250_Syllabus.html
+++ b/STA_250_Syllabus.html
@@ -55,7 +55,7 @@
 <h3>Logistics</h3>
 <ul>
 <li>Instructor: Prof. Paul Baines (<a href="http://www.stat.ucdavis.edu/~pdbaines/">http://www.stat.ucdavis.edu/~pdbaines/</a>)<br /></li>
-<li>Lectures: Mon, Wed: 4:10pm-6:00pm (Bainer 1130)<br /></li>
+<li>Lectures: Mon, Wed: 4:10pm-6:00pm (Wellman 26)<br /></li>
 <li>Course CRN: 53615<br /></li>
 <li>Units: 4.0<br /></li>
 <li>Office Hours:
