Added more lecture 08 notes

--- a/lectures.html
+++ b/lectures.html
@@ -72,7 +72,7 @@
 	<li>Meisner: <a href="notes/Lecture_06_Notes_Meisner.tex">tex</a>, <a href="notes/Lecture_06_Notes_Meisner.pdf">pdf</a></li>
 	<li>Cai: <a href="notes/Lecture_07_Notes_Cai.tex">tex</a>, <a href="notes/Lecture_07_Notes_Cai.pdf">pdf</a></li>
     <li></li>
-    <li>(Coming soon...)</li>
+	<li>Fan: <a href="notes/Lecture_08_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_08_Notes_Fan.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -88,7 +88,7 @@
 	<li>Fan: <a href="notes/Lecture_06_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_06_Notes_Fan.pdf">pdf</a></li>
 	<li>Hsueh: <a href="notes/Lecture_07_Notes_Hsueh.tar.gz">tex</a>, <a href="notes/Lecture_07_Notes_Hsueh.pdf">pdf</a></li>
     <li></li>
-    <li>(Coming soon...)</li>
+	<li>Ji: <a href="notes/Lecture_08_Notes_Ji.tex">tex</a>, <a href="notes/Lecture_08_Notes_Ji.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
