--- a/lectures.html
+++ b/lectures.html
@@ -57,6 +57,7 @@
     <li>Lecture 07</li>
     <li><em>Big Data Module</em></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_08">Lecture 08 Slides</a></li>
+    <li><a href="http://sta250.github.io/Stuff/Lecture_09">Lecture 09 Slides</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -73,6 +74,7 @@
 	<li>Cai: <a href="notes/Lecture_07_Notes_Cai.tex">tex</a>, <a href="notes/Lecture_07_Notes_Cai.pdf">pdf</a></li>
     <li></li>
 	<li>Fan: <a href="notes/Lecture_08_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_08_Notes_Fan.pdf">pdf</a></li>
+    <li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -89,6 +91,7 @@
 	<li>Hsueh: <a href="notes/Lecture_07_Notes_Hsueh.tar.gz">tex</a>, <a href="notes/Lecture_07_Notes_Hsueh.pdf">pdf</a></li>
     <li></li>
 	<li>Ji: <a href="notes/Lecture_08_Notes_Ji.tex">tex</a>, <a href="notes/Lecture_08_Notes_Ji.pdf">pdf</a></li>
+    <li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -104,6 +107,7 @@
     <li>(None)</li>
 	<li>Lee: <a href="notes/Lecture_07_Notes_Lee.tex">tex</a>, <a href="notes/Lecture_07_Notes_Lee.pdf">pdf</a></li>
     <li></li>
+    <li>Chen: <a href="notes/Lecture_08_Notes_Chen.tex">tex</a>, <a href="notes/Lecture_08_Notes_Chi.pdf">pdf</a></li>
     <li>(Coming soon...)</li>
 </ul>
 </div>
@@ -141,6 +145,12 @@
 <ul>
     <li><a href="http://projecteuclid.org/euclid.aos/1176344552">Efron, B. (1979) Bootstrap Methods: Another Look at the Jackknife. The Annals of Statistics. 7, 1, 1-26.</a></li> 
     <li><a href="http://arxiv.org/abs/1112.5016">Kleiner, A., Talwalkar, A., Sarkar, P., Jordan, M.I. (2011) A Scalable Bootstrap for Massive Data. arXiv: 1112.5016</a></li> 
+</ul>
+
+<p>Lecture 09 References (Big Data Lecture 2):</p>
+<ul>
+    <li><a href="http://research.google.com/archive/mapreduce.html">Dean, J. and Ghemawat, S. (2004) MapReduce: Simplified Data Processing on Large Clusters. In: OSDI'04: Sixth Symposium on Operating System Design and Implementation,
+    San Francisco, CA.</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
