Added codeswaps link

--- a/codeswaps.html
+++ b/codeswaps.html
@@ -41,7 +41,8 @@
         <h1>
 <a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>STA 250 Codeswaps</h1>
 
-	<p>As per the syllabus, every assignment will be followed by a <em>code swap</em> or <em>code review</em>. Each student will be assigned to review the homework code of another student in the class. All homework solution code must be uploaded to GitHub within 24 hours of the homework due date. You will then be assigned the GitHub username of a fellow student (randomized) and can then view their homework code by going to <a href="http://github.com">GitHub</a> and finding their homework repo. Randomized student assignments are available from the links below.</p>
+    <p>As per the syllabus, every assignment will be followed by a <em>code swap</em> or <em>code review</em>. Each student will be assigned to review the homework code of another student in the class. All homework solution code must be uploaded to GitHub within 24 hours of the homework due date. You should upload your code as you ran it for the assigment, do not modify or make it more readable after the fact.</p> 
+    <p>After everyone has uploaded their code, you will then be assigned the GitHub username of a fellow student (randomized) and can then view their homework code by going to <a href="http://github.com">GitHub</a> and finding their homework repo. Randomized student assignments are available from the links below.</p>
 	<p>The code review is due exactly 1 week after the homework assignment is due.</p>
 	<p>Code reviews should be at most one page (often less), turned in during class.</p>
 	<p>The should follow the basic outline below:</p>
