--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <li><a href="http://sta250.github.io/Stuff/lectures">Lecture Slides + Notes</a></li>
     <li><a href="http://sta250.github.io/Stuff/practice_problems.html">Practice Problems</a></li>
     <li><a href="http://sta250.github.io/Stuff/homeworks.html">Homeworks</a></li>
+    <li><a href="http://sta250.github.io/Stuff/codeswaps.html">Code-swapping</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
