Added lecture 09 notes

--- a/lectures.html
+++ b/lectures.html
@@ -58,6 +58,7 @@
     <li><em>Big Data Module</em></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_08">Lecture 08 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_09">Lecture 09 Slides</a></li>
+    <li><a href="http://sta250.github.io/Stuff/Lecture_10">Lecture 10 Slides</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -74,6 +75,7 @@
 	<li>Cai: <a href="notes/Lecture_07_Notes_Cai.tex">tex</a>, <a href="notes/Lecture_07_Notes_Cai.pdf">pdf</a></li>
     <li></li>
 	<li>Fan: <a href="notes/Lecture_08_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_08_Notes_Fan.pdf">pdf</a></li>
+	<li>Shvarts: <a href="notes/Lecture_09_Notes_Shvarts.tar.gz">tex</a>, <a href="notes/Lecture_09_Notes_Shvarts.pdf">pdf</a></li>
     <li>(Coming soon...)</li>
 </ul>
 </div>
@@ -91,6 +93,7 @@
 	<li>Hsueh: <a href="notes/Lecture_07_Notes_Hsueh.tar.gz">tex</a>, <a href="notes/Lecture_07_Notes_Hsueh.pdf">pdf</a></li>
     <li></li>
 	<li>Ji: <a href="notes/Lecture_08_Notes_Ji.tex">tex</a>, <a href="notes/Lecture_08_Notes_Ji.pdf">pdf</a></li>
+    <li>(None)</li>
     <li>(Coming soon...)</li>
 </ul>
 </div>
@@ -108,6 +111,7 @@
 	<li>Lee: <a href="notes/Lecture_07_Notes_Lee.tex">tex</a>, <a href="notes/Lecture_07_Notes_Lee.pdf">pdf</a></li>
     <li></li>
     <li>Chen: <a href="notes/Lecture_08_Notes_Chen.tex">tex</a>, <a href="notes/Lecture_08_Notes_Chi.pdf">pdf</a></li>
+    <li>(None)</li>
     <li>(Coming soon...)</li>
 </ul>
 </div>
@@ -153,6 +157,11 @@
     <li><a href="http://research.google.com/archive/papers/mapreduce-sigmetrics09-tutorial.pdf">MapReduce Tutorial (Strategies)</a></li>
     <li><a href="http://www.cs.rutgers.edu/~pxk/417/notes/content/mapreduce.html">MapReduce Tutorial (More Detail)</a></li>
     San Francisco, CA.</a></li>
+</ul>
+
+<p>Lecture 10 References (Big Data Lecture 3):</p>
+<ul>
+    <li><a href="foo.html">()</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
