Added codeswap assignment link to SmartSite

--- a/codeswaps.html
+++ b/codeswaps.html
@@ -55,7 +55,7 @@
 	</ul>
 
 <ul>
-	<li><a href="http://sta250.github.io/Stuff/Codeswap_01.html">Code-swap assignments: Homework 01 (due Mon Nov 4th)</a></li>
+	<li><a href="https://smartsite.ucdavis.edu/access/content/group/2d44ec9f-02b1-4aac-84f6-3eebdb97f77c/Codeswapping%20Assignments/codeswaps_01.txt">Code-swap assignments: Homework 01 (due Mon Nov 4th)</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
