--- a/lectures.html
+++ b/lectures.html
@@ -161,7 +161,7 @@
 
 <p>Lecture 10 References (Big Data Lecture 3):</p>
 <ul>
-    <li><a href="foo.html">()</a></li>
+    <li><a href="http://aws.amazon.com/articles/5249664154115844">Apache Hive Tutorial: Google ngrams</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
