--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <li><a href="http://sta250.github.io/Stuff/practice_problems.html">Practice Problems</a></li>
     <li><a href="http://sta250.github.io/Stuff/homeworks.html">Homeworks</a></li>
     <li><a href="http://sta250.github.io/Stuff/codeswaps.html">Code-swapping</a></li>
+    <li><a href="http://sta250.github.io/Stuff/AWS.html">Getting Started with Amazon Web Services (AWS)</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
