Added lecture 10 notes

--- a/lectures.html
+++ b/lectures.html
@@ -76,7 +76,7 @@
     <li></li>
 	<li>Fan: <a href="notes/Lecture_08_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_08_Notes_Fan.pdf">pdf</a></li>
 	<li>Shvarts: <a href="notes/Lecture_09_Notes_Shvarts.tar.gz">tex</a>, <a href="notes/Lecture_09_Notes_Shvarts.pdf">pdf</a></li>
-    <li>(Coming soon...)</li>
+	<li>Wang: <a href="notes/Lecture_10_Notes_Wang.tex">tex</a>, <a href="notes/Lecture_10_Notes_Wang.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
