Updated AWS README

--- a/AWS.html
+++ b/AWS.html
@@ -52,6 +52,8 @@
   <em>Keep this file safe, it will be your private key for logging into your EMR job.</em><br/><br/>
   </li>
 
+  <li>Note: Only follow the next steps when you have written your mapper and reducer scripts and are ready to deploy your job.</li>
+  <br/><br/>
   <li>Next, go to the Elastic MapReduce tab, and click to launch new work flow.</li>
 
   <li>Under the &quot;Create a Job Flow&quot; option, check &quot;Run Your Own Application&quot; and select &quot;Hive Program&quot;.</li>
