Updated AWS README

--- a/AWS.html
+++ b/AWS.html
@@ -50,9 +50,7 @@
   <li>Click on &quot;Key Pairs&quot; under &quot;Network &amp; Security&quot; in the left panel of the console.</li>
   <li>Click &quot;Create Key Pair&quot; and give your key a distinctive name (e.g., &quot;JimsKeyPair&quot;). The key will be created and you will be prompted to save the file to your computer.<br/><br/>
   <em>Keep this file safe, it will be your private key for logging into your EMR job.</em><br/><br/>
-  </li>
-
-  <li>Note: Only follow the next steps when you have written your mapper and reducer scripts and are ready to deploy your job.</li>
+  <em>Note: Only follow the next steps when you have written your mapper and reducer scripts and are ready to deploy your job.</em><br/><br/>
   <br/><br/>
   <li>Next, go to the Elastic MapReduce tab, and click to launch new work flow.</li>
 
