Added more lecture notes

--- a/lectures.html
+++ b/lectures.html
@@ -94,7 +94,7 @@
     <li></li>
 	<li>Ji: <a href="notes/Lecture_08_Notes_Ji.tex">tex</a>, <a href="notes/Lecture_08_Notes_Ji.pdf">pdf</a></li>
     <li>(None)</li>
-    <li>(Coming soon...)</li>
+	<li>Nguyen: <a href="notes/Lecture_10_Notes_Nguyen.tex">tex</a>, <a href="notes/Lecture_10_Notes_Nguyen.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
