--- a/homeworks.html
+++ b/homeworks.html
@@ -46,6 +46,7 @@
 <ul>
 	<li><a href="http://sta250.github.io/Stuff/Homework_00.html">Homework 00</a></li>
 	<li><a href="http://sta250.github.io/Stuff/Homework_01.html">Homework 01</a></li>
+	<li><a href="http://sta250.github.io/Stuff/Homework_02.html">Homework 02</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
