--- a/Homework_02.html
+++ b/Homework_02.html
@@ -207,7 +207,7 @@ statistical problems then the final projects will provide an opportunity to do s
       </code></pre>
       Do not run your Hadoop job until this works correctly!</li>
       <li>When launching your Hadoop cluster, follow the instructions in class (i.e., an Interactive Hive configuration), and
-      select "Large" for the master, and 5 "Large" compute nodes.</li>
+      select &quot;Large&quot; for the master, and 5 &quot;Medium&quot; compute nodes.</li>
       <li>Once logged in, to see what files you have, type <code>ls</code>. To access the HDFS, use <code>hadoop fs</code> as done in class (lecture 09). First off, you need to create a directory on the HDFS:<br/>
       <pre><code>
       hadoop fs -mkdir data
