--- a/Final_Project_Report.html
+++ b/Final_Project_Report.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <a href="http://sta250.github.io/Stuff"><h1>STA 250 :: Advanced Statistical Computing (UCD, Fall 2013)</h1></a>
+            <a href="http://sta250.github.io/Stuff"><h1>STA 250 :: Advanced Statistical Computing (UCD, Fall 2013)</h1></a>
           <p>Code + goodies used in Prof. Baines' STA 250 Course (UC Davis, Fall 2013)</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/STA250">STA250</a></span>
@@ -39,28 +39,9 @@
         </div>
 
         <h1>
-<a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>Course Website</h1>
+<a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>STA 250 Final Project Report</h1>
 
-<p>Welcome to STA 250!</p>
-
-<p>This is the course website, and main portal to code, slides and other materials used in Prof. Baines' STA 250 Course (UC Davis, Fall 2013)</p>
-
-<p>Links to various code snippets, data, notes etc. will be made available here throughout the course.</p>
-
-<p>Course code will be hosted on the <a href="https://github.com/STA250/">course GitHub repo</a>. The syllabus and lecture slides can be found here:</p>
-
-<ul>
-    <li><a href="http://sta250.github.io/Stuff/STA_250_Syllabus">Syllabus</a></li>
-    <li><a href="https://github.com/STA250/Stuff/blob/master/Docs/Python_on_Windows.md">Python on Windows</a></li>
-    <li><a href="http://sta250.github.io/Stuff/sync_fork">Syncing a Forked GitHub Repo</a></li>
-    <li><a href="http://sta250.github.io/Stuff/lectures">Lecture Slides + Notes</a></li>
-    <li><a href="http://sta250.github.io/Stuff/practice_problems.html">Practice Problems</a></li>
-    <li><a href="http://sta250.github.io/Stuff/homeworks.html">Homeworks</a></li>
-    <li><a href="http://sta250.github.io/Stuff/codeswaps.html">Code-swapping</a></li>
-    <li><a href="http://sta250.github.io/Stuff/AWS.html">Getting Started with Amazon Web Services (AWS)</a></li>
-    <li><a href="http://sta250.github.io/Stuff/Final_Project_List.html">Final Project Topics</a></li>
-    <li><a href="http://sta250.github.io/Stuff/Final_Project_Report.html">Final Project Report Guidelines</a></li>
-</ul>
+<p>Final Project report guidelines will appear here.</p>
 
 <p>Happy coding! :)</p>
       </section>
