--- a/lectures.html
+++ b/lectures.html
@@ -59,6 +59,7 @@
     <li><a href="http://sta250.github.io/Stuff/Lecture_08">Lecture 08 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_09">Lecture 09 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_10">Lecture 10 Slides</a></li>
+    <li><a href="http://sta250.github.io/Stuff/Lecture_11">Lecture 11 Slides</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -77,6 +78,7 @@
 	<li>Fan: <a href="notes/Lecture_08_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_08_Notes_Fan.pdf">pdf</a></li>
 	<li>Shvarts: <a href="notes/Lecture_09_Notes_Shvarts.tar.gz">tex</a>, <a href="notes/Lecture_09_Notes_Shvarts.pdf">pdf</a></li>
 	<li>Wang: <a href="notes/Lecture_10_Notes_Wang.tex">tex</a>, <a href="notes/Lecture_10_Notes_Wang.pdf">pdf</a></li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -95,6 +97,7 @@
 	<li>Ji: <a href="notes/Lecture_08_Notes_Ji.tex">tex</a>, <a href="notes/Lecture_08_Notes_Ji.pdf">pdf</a></li>
     <li>(None)</li>
 	<li>Nguyen: <a href="notes/Lecture_10_Notes_Nguyen.tex">tex</a>, <a href="notes/Lecture_10_Notes_Nguyen.pdf">pdf</a></li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -113,6 +116,7 @@
     <li>Chen: <a href="notes/Lecture_08_Notes_Chen.tex">tex</a>, <a href="notes/Lecture_08_Notes_Chi.pdf">pdf</a></li>
     <li>(None)</li>
     <li>(Coming soon...)</li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <br/><br/>
@@ -162,6 +166,11 @@
 <p>Lecture 10 References (Big Data Lecture 3):</p>
 <ul>
     <li><a href="http://aws.amazon.com/articles/5249664154115844">Apache Hive Tutorial: Google ngrams</a></li>
+</ul>
+
+<p>Lecture 11 References (Big Data Lecture 4):</p>
+<ul>
+    <li><a href="http://docs.python.org/tutorial">Python Tutorial</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
