Fixed typo in lecture ref

--- a/lectures.html
+++ b/lectures.html
@@ -157,10 +157,9 @@
 
 <p>Lecture 09 References (Big Data Lecture 2):</p>
 <ul>
-    <li><a href="http://research.google.com/archive/mapreduce.html">Dean, J. and Ghemawat, S. (2004) MapReduce: Simplified Data Processing on Large Clusters. In: OSDI'04: Sixth Symposium on Operating System Design and Implementation,
+    <li><a href="http://research.google.com/archive/mapreduce.html">Dean, J. and Ghemawat, S. (2004) MapReduce: Simplified Data Processing on Large Clusters. In: OSDI'04: Sixth Symposium on Operating System Design and Implementation, San Francisco, CA.</a></li>
     <li><a href="http://research.google.com/archive/papers/mapreduce-sigmetrics09-tutorial.pdf">MapReduce Tutorial (Strategies)</a></li>
     <li><a href="http://www.cs.rutgers.edu/~pxk/417/notes/content/mapreduce.html">MapReduce Tutorial (More Detail)</a></li>
-    San Francisco, CA.</a></li>
 </ul>
 
 <p>Lecture 10 References (Big Data Lecture 3):</p>
