--- a/lectures.html
+++ b/lectures.html
@@ -60,6 +60,8 @@
     <li><a href="http://sta250.github.io/Stuff/Lecture_09">Lecture 09 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_10">Lecture 10 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_11">Lecture 11 Slides</a></li>
+    <li><em>Optimization &amp; EM Module</em></li>
+    <li><a href="Lecture_12.pdf">Lecture 12</a> <a href="Lecture_12.tex">(tex)</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -78,7 +80,9 @@
 	<li>Fan: <a href="notes/Lecture_08_Notes_Fan.tex">tex</a>, <a href="notes/Lecture_08_Notes_Fan.pdf">pdf</a></li>
 	<li>Shvarts: <a href="notes/Lecture_09_Notes_Shvarts.tar.gz">tex</a>, <a href="notes/Lecture_09_Notes_Shvarts.pdf">pdf</a></li>
 	<li>Wang: <a href="notes/Lecture_10_Notes_Wang.tex">tex</a>, <a href="notes/Lecture_10_Notes_Wang.pdf">pdf</a></li>
-	<li>(Coming soon...)</li>
+	<li>Chen: <a href="notes/Lecture_11_Notes_Chen.tar.gz">tex</a>, <a href="notes/Lecture_11_Notes_Chen.pdf">pdf</a></li>
+	<li></li>
+	<li>Cheung: <a href="notes/Lecture_12_Notes_Cheung.tex">tex</a>, <a href="notes/Lecture_12_Notes_Cheung.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -98,6 +102,8 @@
     <li>(None)</li>
 	<li>Nguyen: <a href="notes/Lecture_10_Notes_Nguyen.tex">tex</a>, <a href="notes/Lecture_10_Notes_Nguyen.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
+    <li></li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -116,6 +122,8 @@
     <li>Chen: <a href="notes/Lecture_08_Notes_Chen.tex">tex</a>, <a href="notes/Lecture_08_Notes_Chi.pdf">pdf</a></li>
     <li>(None)</li>
     <li>(Coming soon...)</li>
+	<li>(Coming soon...)</li>
+    <li></li>
 	<li>(Coming soon...)</li>
 </ul>
 </div>
@@ -170,6 +178,16 @@
 <p>Lecture 11 References (Big Data Lecture 4):</p>
 <ul>
     <li><a href="http://docs.python.org/tutorial">Python Tutorial</a></li>
+</ul>
+
+<p>Lecture 12 References (Optimization + EM Lecture 1):</p>
+<ul>
+    <li><a href="http://www.jstor.org/stable/2984875">Dempster, A.P., Laird, N.M. and Rubin, D.B. (1977) Maximum Likelihood from Incomplete Data via the EM Algorithm. Journal of the Royal Statistical Society, Series B. 39-1, 1-38.</a></li>
+</ul>
+
+<p>Lecture 13 References (Optimization + EM Lecture 2):</p>
+<ul>
+    <li><a href="http://projecteuclid.org/euclid.aos/1176346060">Wu, C.F.J. (1977) On the Convergence Properties of the EM Algorithm. The Annals of Statistics. 11-1, 95-103.</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
