--- a/lectures.html
+++ b/lectures.html
@@ -103,7 +103,7 @@
 	<li>Nguyen: <a href="notes/Lecture_10_Notes_Nguyen.tex">tex</a>, <a href="notes/Lecture_10_Notes_Nguyen.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
     <li></li>
-	<li>(Coming soon...)</li>
+	<li>Paisley: <a href="notes/Lecture_12_Notes_Paisley.tex">tex</a>, <a href="notes/Lecture_12_Notes_Paisley.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -121,8 +121,8 @@
     <li></li>
     <li>Chen: <a href="notes/Lecture_08_Notes_Chen.tex">tex</a>, <a href="notes/Lecture_08_Notes_Chi.pdf">pdf</a></li>
     <li>(None)</li>
-    <li>(Coming soon...)</li>
-	<li>(Coming soon...)</li>
+    <li>(None)</li>
+	<li>(None)</li>
     <li></li>
 	<li>(Coming soon...)</li>
 </ul>
