--- a/lectures.html
+++ b/lectures.html
@@ -62,6 +62,7 @@
     <li><a href="http://sta250.github.io/Stuff/Lecture_11">Lecture 11 Slides</a></li>
     <li><em>Optimization &amp; EM Module</em></li>
     <li><a href="Lecture_12.pdf">Lecture 12</a> <a href="Lecture_12.tex">(tex)</a></li>
+    <li><a href="Lecture_13.pdf">Lecture 13</a> <a href="Lecture_13.tex">(tex)</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -83,6 +84,7 @@
 	<li>Chen: <a href="notes/Lecture_11_Notes_Chen.tar.gz">tex</a>, <a href="notes/Lecture_11_Notes_Chen.pdf">pdf</a></li>
 	<li></li>
 	<li>Cheung: <a href="notes/Lecture_12_Notes_Cheung.tex">tex</a>, <a href="notes/Lecture_12_Notes_Cheung.pdf">pdf</a></li>
+	<li>Li: <a href="notes/Lecture_13_Notes_Li.tex">tex</a>, <a href="notes/Lecture_13_Notes_Li.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -104,6 +106,7 @@
 	<li>(Coming soon...)</li>
     <li></li>
 	<li>Paisley: <a href="notes/Lecture_12_Notes_Paisley.tex">tex</a>, <a href="notes/Lecture_12_Notes_Paisley.pdf">pdf</a></li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -124,6 +127,7 @@
     <li>(None)</li>
 	<li>(None)</li>
     <li></li>
+	<li>Li: <a href="notes/Lecture_12_Notes_Li.tex">tex</a>, <a href="notes/Lecture_12_Notes_Li.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
 </ul>
 </div>
