--- a/lectures.html
+++ b/lectures.html
@@ -60,7 +60,7 @@
     <li><a href="http://sta250.github.io/Stuff/Lecture_09">Lecture 09 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_10">Lecture 10 Slides</a></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_11">Lecture 11 Slides</a></li>
-    <li><em>Optimization &amp; EM Module</em></li>
+    <li><em>EM Module</em></li>
     <li><a href="Lecture_12.pdf">Lecture 12</a> <a href="Lecture_12.tex">(tex)</a></li>
     <li><a href="Lecture_13.pdf">Lecture 13</a> <a href="Lecture_13.tex">(tex)</a></li>
 </ul>
