Added codeswap 2 assignments

--- a/codeswaps.html
+++ b/codeswaps.html
@@ -56,6 +56,8 @@
 
 <ul>
 	<li><a href="https://smartsite.ucdavis.edu/access/content/group/2d44ec9f-02b1-4aac-84f6-3eebdb97f77c/Codeswapping%20Assignments/codeswaps_01.txt">Code-swap assignments: Homework 01 (due Mon Nov 4th)</a></li>
+	<li><a href="https://smartsite.ucdavis.edu/access/content/group/2d44ec9f-02b1-4aac-84f6-3eebdb97f77c/Codeswapping%20Assignments/codeswaps_02.txt">Code-swap assignments: Homework 02 (due Wed Nov 20th)</a></li>
+
 </ul>
 
 <p>Happy coding! :)</p>
