--- a/lectures.html
+++ b/lectures.html
@@ -84,7 +84,7 @@
 	<li>Chen: <a href="notes/Lecture_11_Notes_Chen.tar.gz">tex</a>, <a href="notes/Lecture_11_Notes_Chen.pdf">pdf</a></li>
 	<li></li>
 	<li>Cheung: <a href="notes/Lecture_12_Notes_Cheung.tex">tex</a>, <a href="notes/Lecture_12_Notes_Cheung.pdf">pdf</a></li>
-	<li>Li: <a href="notes/Lecture_13_Notes_Li.tex">tex</a>, <a href="notes/Lecture_13_Notes_Li.pdf">pdf</a></li>
+	<li>Shuo: <a href="notes/Lecture_13_Notes_Li.tex">tex</a>, <a href="notes/Lecture_13_Notes_Li.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -106,7 +106,7 @@
 	<li>(Coming soon...)</li>
     <li></li>
 	<li>Paisley: <a href="notes/Lecture_12_Notes_Paisley.tex">tex</a>, <a href="notes/Lecture_12_Notes_Paisley.pdf">pdf</a></li>
-	<li>(Coming soon...)</li>
+	<li>Shuyang: <a href="notes/Lecture_13_Notes_ShLi.tex">tex</a>, <a href="notes/Lecture_13_Notes_ShLi.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
