--- a/Final_Project_List.html
+++ b/Final_Project_List.html
@@ -51,14 +51,22 @@ report please see <a href="Final_Project_Report.html">Final Project Report Guide
 <ul>
 	<li><em>Applied Bayesian Modeling:</em> Brief description to appear here.</li>
 	<li><em>Advanced MCMC Techniques:</em> Brief description to appear here.</li>
-	<li><em>Hamiltonian Monte Carlo:</em> Brief description to appear here.</li>
-	<li><em>Parallel Tempering and Energy-based Samplers:</em> Brief description to appear here.</li>
-	<li><em>Bag of Little Bootstraps:</em> Brief description to appear here.</li>
+	<li><em>Hamiltonian Monte Carlo:</em> Brief description to appear here.
+	<a href="http://www.mcmchandbook.net/HandbookChapter5.pdf">Neal, R. (2011) MCMC using Hamiltonian Dynamics. Chapter 5 in the Handbook of Markov Chain Monte Carlo. Chapman and Hall/CRC.</a> 
+	</li>
+	<li><em>Parallel Tempering and Energy-based Samplers:</em> Brief description to appear here.
+	<a href="http://www.stat.umn.edu/geyer/f05/8931/c.pdf">Geyer, C.J. (1991) Markov Chain Monte Carlo Maximum Likelihood. Proceeding of the Interface.</a>
+	</li>
+	<li><em>Bag of Little Bootstraps:</em> Brief description to appear here.
+	<a href="http://arxiv.org/abs/1112.5016">Kleiner, A., Talwalkar, A., Sarkar, P., Jordan, M.I. (2011) A Scalable Bootstrap for Massive Data. arXiv: 1112.5016</a>
+	</li>
 	<li><em>Consensus Monte Carlo:</em> Brief description to appear here.</li>
 	<li><em>Applications using Hive:</em> Brief description to appear here.</li>
 	<li><em>Applications using MapReduce:</em> Brief description to appear here.</li>
 	<li><em>An Exploration of MCEM:</em> Brief description to appear here.</li>
-	<li><em>An Exploration of PXEM:</em> Brief description to appear here.</li>
+	<li><em>An Exploration of PXEM:</em> Brief description to appear here.
+    <a href="www.stat.ucla.edu/~ywu/research/papers/pxem.pdf">Liu, C., Rubin, D.B., Wu, Y.N. (1998) Parameter Expansion to Accelerate EM: The PX-EM Algorithm. Biometrika. 85, 4, pp.755-770.</a>
+	</li>
 	<li><em>An Exploration of IEM:</em> Brief description to appear here.</li>
 	<li><em>GPU Applications using PyCUDA:</em> Brief description to appear here.</li>
 	<li><em>GPU Applications using RCUDA:</em> Brief description to appear here.</li>
