--- a/lectures.html
+++ b/lectures.html
@@ -194,6 +194,12 @@
     <li><a href="http://projecteuclid.org/euclid.aos/1176346060">Wu, C.F.J. (1977) On the Convergence Properties of the EM Algorithm. The Annals of Statistics. 11-1, 95-103.</a></li>
 </ul>
 
+<p>Lecture 14 References (Optimization + EM Lecture 3):</p>
+<ul>
+    <li><a href="www.jstor.org/stable/2337198">Meng, X.-L. and Rubin, D.B. (1993) Maximum Likelihood Estimationn via the ECM Algorithm: A General Framework. Biometrika. 80-2, 267-278.</a></li>
+    <li><a href="www.jstor.org/stable/1391097">Levine, R.A. and Casella, G. (2001) Implementations of the Monte Carlo EM Algorithm. Journal of Computational and Graphical Statistics. 10-3, 422-439.</a></li>
+</ul>
+
 <p>Happy coding! :)</p>
       </section>
 
