Fluffed out final project stuff

--- a/Final_Project_Report.html
+++ b/Final_Project_Report.html
@@ -41,9 +41,25 @@
         <h1>
 <a name="stuff" class="anchor" href="#stuff"><span class="octicon octicon-link"></span></a>STA 250 Final Project Report</h1>
 
-<p>Final Project report guidelines will appear here.</p>
+<p>The STA 250 Final Project report should conform to the following guidelines:</p>
 
-<p>Happy coding! :)</p>
+<ul>
+    <li>Total Length: No more than 10 pages (excluding cover page and appendices). The report should read as a self-contained paper that a reader with a reasonable amount of statistical knowledge could understand. The goal of the report is to explain the motivation, methodology and results of your project to your readers.</li>
+</ul>
+<p>Suggested organization of the report is given below, but you are welcome to use different headings and sections if you believe your project does not fit well with the template.</p>
+<ol>
+    <li>Cover Page: Containing project title and your name.</li>
+    <li>Introduction: Explain the background to your project and the methodology you are using. For example, if you elected to do a project on the Equi-Energy Sampler, you should describe the motivation of the algorithm (i.e., why it was developed and what it is useful for). As another example, suppose you elected to do a project applying Machine Learning algorithms using Mahout; in this case your introduction could motivate Hadoop, Mahout and the use of Machine Learning algorithms for
+    Big Data problems.</li>
+    <li>Methodology: Explain the methodology you used, and any choices you made. If you are implementing an algorithm, then this section should describe the algorithm, and any accompanying choices of tuning parameters/configurations. For example, if you decided to investigate chaining Hadoop jobs, then this section should describe the strategy you used and the pros and cons of the approach.</li>
+    <li>Results: Describe the main findings of your project. If you implemented an algorithm then this section will typically include the results of a simulation study or analysis of a real dataset. For those doing more technical projects, this section could include comparisons of runtimes, memory requirements etc. of different computational approaches.</li>
+    <li>Conclusions: Summarize the main findings of your project. What did you learn? What are the key points that a reader should take away?</li>
+    <li>Possible Extensions: During your project you likely had ideas for additional things to do, but not enough time to do them. This section provides an opportunity to briefly describe the next steps you would have taken if given more time.</li>
+    <li>Self-Criticisms: If you cut corners, made simplifications or generally had to hack your code to get something working, this is your chance to criticise yourself. Use this section as an opportunity to reflect on how you would improve your code/analysis if given the opportunity to redo your project.</li>
+    <li>Appendices: Attach the main code files for the project, and any supplementary graphs or materials. Also, appendices can be used to include detailed derivations that do not need to be contained in the main body of the report.</li>
+</ol>
+
+<p>(: Happy coding! :)</p>
       </section>
 
     </div>
