Added lecture links

--- a/lectures.html
+++ b/lectures.html
@@ -63,6 +63,8 @@
     <li><em>EM Module</em></li>
     <li><a href="Lecture_12.pdf">Lecture 12</a> <a href="Lecture_12.tex">(tex)</a></li>
     <li><a href="Lecture_13.pdf">Lecture 13</a> <a href="Lecture_13.tex">(tex)</a></li>
+    <li>Lecture 14</li>
+    <li>Lecture 15</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -85,6 +87,8 @@
 	<li></li>
 	<li>Cheung: <a href="notes/Lecture_12_Notes_Cheung.tex">tex</a>, <a href="notes/Lecture_12_Notes_Cheung.pdf">pdf</a></li>
 	<li>Shuo: <a href="notes/Lecture_13_Notes_Li.tex">tex</a>, <a href="notes/Lecture_13_Notes_Li.pdf">pdf</a></li>
+	<li>(Coming soon...)</li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -107,6 +111,8 @@
     <li></li>
 	<li>Paisley: <a href="notes/Lecture_12_Notes_Paisley.tex">tex</a>, <a href="notes/Lecture_12_Notes_Paisley.pdf">pdf</a></li>
 	<li>Shuyang: <a href="notes/Lecture_13_Notes_ShLi.tex">tex</a>, <a href="notes/Lecture_13_Notes_ShLi.pdf">pdf</a></li>
+	<li>(Coming soon...)</li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -128,6 +134,8 @@
 	<li>(None)</li>
     <li></li>
 	<li>Li: <a href="notes/Lecture_12_Notes_Li.tex">tex</a>, <a href="notes/Lecture_12_Notes_Li.pdf">pdf</a></li>
+	<li>(None)</li>
+	<li>(Coming soon...)</li>
 	<li>(Coming soon...)</li>
 </ul>
 </div>
@@ -198,6 +206,12 @@
 <ul>
     <li><a href="www.jstor.org/stable/2337198">Meng, X.-L. and Rubin, D.B. (1993) Maximum Likelihood Estimationn via the ECM Algorithm: A General Framework. Biometrika. 80-2, 267-278.</a></li>
     <li><a href="www.jstor.org/stable/1391097">Levine, R.A. and Casella, G. (2001) Implementations of the Monte Carlo EM Algorithm. Journal of Computational and Graphical Statistics. 10-3, 422-439.</a></li>
+</ul>
+
+<p>Lecture 15 References (Optimization + EM Lecture 4):</p>
+<ul>
+    <li><a href="http://www.stat.ucdavis.edu/~pdbaines/pdfs/IEM_AOS_Paper.pdf">Baines, P.D., Meng, X.-L. and Xie, X. (2013) Accelerating EM via Interweaving: The IEM Algorithm.</a></li>
+    <li><a href="http://www.stat.harvard.edu/Faculty_Content/meng/jcgs.2011-article.pdf">Yu, Y. and Meng, X.-L. (2013) To Center or Not to Center: That is Not the Question – An Ancillarity-Sufficiency Interweaving Strategy (ASIS) for Boosting MCMC Efficiency (with discussion). Journal of Computational and Graphical Statistics. 20, 531–570.</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
