--- a/plain/Homework_03_plain.html
+++ b/plain/Homework_03_plain.html
@@ -17,7 +17,7 @@
 <h2>Homework 03</h2>
 <h2>Due: In Class, Wed November 27th</h2>
 <h4>Assigned: Wednesday November 20th</h4>
-<h4>Bayesian Inference Module</h4>
+<h4>Optimization and EM Module</h4>
 <p>(<a href="plain/Homework_03_plain.html">Click here for printable version</a>)</p>
 <p>
 In this homework you will implement several variants of the EM algorithm 
