--- a/plain/Homework_02_plain.html
+++ b/plain/Homework_02_plain.html
@@ -15,7 +15,7 @@
 <h2>Homework 02</h2>
 <h2>Due: In Class, Wed November 13th</h2>
 <h4>Assigned: Thursday Oct 31st</h4>
-<h4>Bayesian Inference Module</h4>
+<h4>Big Data Module</h4>
 <p>(<a href="plain/Homework_02_plain.html">Click here for printable version</a>)</p>
 <p>
 In this homework you will implement the &quot;Bag of Little Bootstraps&quot; for a large dataset 
