Added homework link

--- a/homeworks.html
+++ b/homeworks.html
@@ -47,6 +47,7 @@
 	<li><a href="http://sta250.github.io/Stuff/Homework_00.html">Homework 00</a></li>
 	<li><a href="http://sta250.github.io/Stuff/Homework_01.html">Homework 01</a></li>
 	<li><a href="http://sta250.github.io/Stuff/Homework_02.html">Homework 02</a></li>
+	<li><a href="http://sta250.github.io/Stuff/Homework_03.html">Homework 03</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
