Fixed broken links

--- a/Final_Project_List.html
+++ b/Final_Project_List.html
@@ -92,11 +92,11 @@ report please see <a href="Final_Project_Report.html">Final Project Report Guide
 
     <li><em>An Exploration of MCEM:</em> In homework 3 you have the opportunity to implement MCEM, but in this project you can go deeper into the issues, possibly exploring the use of dependent MCMC samples to approximate the E-step. Possible examples include the models presented in section 3 of the reference (below) such as the Logit-Normal and Probit Threshold model. Generalized Linear Mixed Models provide many opportunities for the applications of MCEM, so those with an interest in that
     area could explore applications related to GLMMs.<br/>
-    <a href="www.jstor.org/stable/1391097">Levine, R.A. and Casella, G. (2001) Implementations of the Monte Carlo EM Algorithm. Journal of Computational and Graphical Statistics. 10-3, 422-439.</a>
+    <a href="http://www.jstor.org/stable/1391097">Levine, R.A. and Casella, G. (2001) Implementations of the Monte Carlo EM Algorithm. Journal of Computational and Graphical Statistics. 10-3, 422-439.</a>
     <br/><br/></li>
 
     <li><em>An Exploration of PXEM:</em> The idea of parameter expansion has proven to be highly successful in both a sampling and optimization context. In this project you will have the opportunity to implement the Parameter Expanded EM (PXEM) algorithm and apply it to one or more models of your choosing. Good starting points include the multivariate-t regression model or Linear Mixed Effects model (or other examples presented in section 4 of the paper).<br/>
-    <a href="www.stat.ucla.edu/~ywu/research/papers/pxem.pdf">Liu, C., Rubin, D.B., Wu, Y.N. (1998) Parameter Expansion to Accelerate EM: The PX-EM Algorithm. Biometrika. 85, 4, pp.755-770.</a>
+    <a href="http://www.stat.ucla.edu/~ywu/research/papers/pxem.pdf">Liu, C., Rubin, D.B., Wu, Y.N. (1998) Parameter Expansion to Accelerate EM: The PX-EM Algorithm. Biometrika. 85, 4, pp.755-770.</a>
     <br/><br/></li>
 
     <li><em>An Exploration of IEM:</em> In module 3 you were introduced to the basics of the IEM algorithm. For a final project one possibility is to apply IEM in a new setting, possibly requiring Monte Carlo or numerical methods for the E- and M-steps. Possible examples include the Hierarchical Binomial model:
