--- a/lectures.html
+++ b/lectures.html
@@ -88,7 +88,7 @@
 	<li>Cheung: <a href="notes/Lecture_12_Notes_Cheung.tex">tex</a>, <a href="notes/Lecture_12_Notes_Cheung.pdf">pdf</a></li>
 	<li>Shuo: <a href="notes/Lecture_13_Notes_Li.tex">tex</a>, <a href="notes/Lecture_13_Notes_Li.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
-	<li>(Coming soon...)</li>
+	<li>Bissell: <a href="notes/Lecture_15_Notes_Bissell.tex">tex</a>, <a href="notes/Lecture_15_Notes_Bissell.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
