--- a/lectures.html
+++ b/lectures.html
@@ -112,7 +112,7 @@
 	<li>Paisley: <a href="notes/Lecture_12_Notes_Paisley.tex">tex</a>, <a href="notes/Lecture_12_Notes_Paisley.pdf">pdf</a></li>
 	<li>Shuyang: <a href="notes/Lecture_13_Notes_ShLi.tex">tex</a>, <a href="notes/Lecture_13_Notes_ShLi.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
-	<li>(Coming soon...)</li>
+	<li>Li: <a href="notes/Lecture_15_Notes_Li.tex">tex</a>, <a href="notes/Lecture_15_Notes_Li.pdf">pdf</a></li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -136,7 +136,7 @@
 	<li>Li: <a href="notes/Lecture_12_Notes_Li.tex">tex</a>, <a href="notes/Lecture_12_Notes_Li.pdf">pdf</a></li>
 	<li>(None)</li>
 	<li>(Coming soon...)</li>
-	<li>(Coming soon...)</li>
+	<li>Kuo: <a href="notes/Lecture_15_Notes_Kuo.tex">tex</a>, <a href="notes/Lecture_15_Notes_Kuo.pdf">pdf</a></li>
 </ul>
 </div>
 <br/><br/>
