--- a/lectures.html
+++ b/lectures.html
@@ -65,6 +65,8 @@
     <li><a href="Lecture_13.pdf">Lecture 13</a> <a href="Lecture_13.tex">(tex)</a></li>
     <li>Lecture 14</li>
     <li>Lecture 15</li>
+    <li></li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -89,6 +91,8 @@
 	<li>Shuo: <a href="notes/Lecture_13_Notes_Li.tex">tex</a>, <a href="notes/Lecture_13_Notes_Li.pdf">pdf</a></li>
 	<li>Ganesh: <a href="notes/Lecture_14_Notes_Ganesh.tex">tex</a>, <a href="notes/Lecture_14_Notes_Ganesh.pdf">pdf</a></li>
 	<li>Bissell: <a href="notes/Lecture_15_Notes_Bissell.tex">tex</a>, <a href="notes/Lecture_15_Notes_Bissell.pdf">pdf</a></li>
+    <li></li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -113,6 +117,8 @@
 	<li>Shuyang: <a href="notes/Lecture_13_Notes_ShLi.tex">tex</a>, <a href="notes/Lecture_13_Notes_ShLi.pdf">pdf</a></li>
 	<li>(Coming soon...)</li>
 	<li>Li: <a href="notes/Lecture_15_Notes_Li.tex">tex</a>, <a href="notes/Lecture_15_Notes_Li.pdf">pdf</a></li>
+    <li></li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -137,6 +143,8 @@
 	<li>(None)</li>
 	<li>(Coming soon...)</li>
 	<li>Kuo: <a href="notes/Lecture_15_Notes_Kuo.tex">tex</a>, <a href="notes/Lecture_15_Notes_Kuo.pdf">pdf</a></li>
+    <li></li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <br/><br/>
@@ -212,6 +220,11 @@
 <ul>
     <li><a href="http://www.stat.ucdavis.edu/~pdbaines/pdfs/IEM_AOS_Paper.pdf">Baines, P.D., Meng, X.-L. and Xie, X. (2013) Accelerating EM via Interweaving: The IEM Algorithm.</a></li>
     <li><a href="http://www.stat.harvard.edu/Faculty_Content/meng/jcgs.2011-article.pdf">Yu, Y. and Meng, X.-L. (2013) To Center or Not to Center: That is Not the Question – An Ancillarity-Sufficiency Interweaving Strategy (ASIS) for Boosting MCMC Efficiency (with discussion). Journal of Computational and Graphical Statistics. 20, 531–570.</a></li>
+</ul>
+
+<p>Lecture 16 References (Parallelization + GPUs Lecture 1):</p>
+<ul>
+    <li><a href="http://www.nvidia.com/content/cudazone/download/Advanced_CUDA_Training_NVISION08.pdf">Advanced CUDA Slides (NVIDIA)</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
