--- a/lectures.html
+++ b/lectures.html
@@ -66,7 +66,7 @@
     <li>Lecture 14</li>
     <li>Lecture 15</li>
     <li></li>
-	<li>(Coming soon...)</li>
+    <li><a href="http://sta250.github.io/Stuff/Lecture_16">Lecture 16 Slides</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -224,7 +224,10 @@
 
 <p>Lecture 16 References (Parallelization + GPUs Lecture 1):</p>
 <ul>
+    <li><a href="http://docs.nvidia.com/cuda/">CUDA Documentation</a></li>
+    <li><a href="http://docs.nvidia.com/cuda/cublas/">CUBLAS Documentation</a></li>
     <li><a href="http://www.nvidia.com/content/cudazone/download/Advanced_CUDA_Training_NVISION08.pdf">Advanced CUDA Slides (NVIDIA)</a></li>
+    <li><a href="http://people.maths.ox.ac.uk/gilesm/cuda/lecs/lecs.pdf">Mike Giles' CUDA Slides</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
