Added lecture link

--- a/lectures.html
+++ b/lectures.html
@@ -67,6 +67,7 @@
     <li>Lecture 15</li>
     <li></li>
     <li><a href="http://sta250.github.io/Stuff/Lecture_16">Lecture 16 Slides</a></li>
+    <li><a href="http://sta250.github.io/Stuff/Lecture_17">Lecture 17 Slides</a></li>
 </ul>
 </div>
 <div style="float: left; width: 25%;">
@@ -92,6 +93,7 @@
 	<li>Ganesh: <a href="notes/Lecture_14_Notes_Ganesh.tex">tex</a>, <a href="notes/Lecture_14_Notes_Ganesh.pdf">pdf</a></li>
 	<li>Bissell: <a href="notes/Lecture_15_Notes_Bissell.tex">tex</a>, <a href="notes/Lecture_15_Notes_Bissell.pdf">pdf</a></li>
     <li></li>
+	<li>(Coming soon...)</li>
 	<li>(Coming soon...)</li>
 </ul>
 </div>
@@ -119,6 +121,7 @@
 	<li>Li: <a href="notes/Lecture_15_Notes_Li.tex">tex</a>, <a href="notes/Lecture_15_Notes_Li.pdf">pdf</a></li>
     <li></li>
 	<li>(Coming soon...)</li>
+	<li>(Coming soon...)</li>
 </ul>
 </div>
 <div style="float: right; width: 25%;">
@@ -144,6 +147,7 @@
 	<li>(Coming soon...)</li>
 	<li>Kuo: <a href="notes/Lecture_15_Notes_Kuo.tex">tex</a>, <a href="notes/Lecture_15_Notes_Kuo.pdf">pdf</a></li>
     <li></li>
+	<li>(Coming soon...)</li>
 	<li>(Coming soon...)</li>
 </ul>
 </div>
@@ -228,6 +232,12 @@
     <li><a href="http://docs.nvidia.com/cuda/cublas/">CUBLAS Documentation</a></li>
     <li><a href="http://www.nvidia.com/content/cudazone/download/Advanced_CUDA_Training_NVISION08.pdf">Advanced CUDA Slides (NVIDIA)</a></li>
     <li><a href="http://people.maths.ox.ac.uk/gilesm/cuda/lecs/lecs.pdf">Mike Giles' CUDA Slides</a></li>
+</ul>
+
+<p>Lecture 17 References (Parallelization + GPUs Lecture 2):</p>
+<ul>
+    <li><a href="http://github.com/duncantl/RCUDA">RCUDA Package</a></li>
+    <li><a href="http://stat.ucdavis.edu/~pdbaines/pdfs/RCUDA.pdf">Baines, P.D. and Temple Lang, D. (2013) RCUDA: General programming facilities for GPUs in R.</a></li>
 </ul>
 
 <p>Happy coding! :)</p>
