--- a/lectures.html
+++ b/lectures.html
@@ -240,6 +240,13 @@
     <li><a href="http://stat.ucdavis.edu/~pdbaines/pdfs/RCUDA.pdf">Baines, P.D. and Temple Lang, D. (2013) RCUDA: General programming facilities for GPUs in R.</a></li>
 </ul>
 
+<p>Lecture 18 References (Parallelization + GPUs Lecture 3):</p>
+<ul>
+    <li><a href="http://mathema.tician.de/software/pycuda/">PyCUDA Documentation</a></li>
+    <li><a href="http://arxiv.org/pdf/0907.4010.pdf">Robert, C.P. (2009) Simulation of truncated normal variables. ArXiv 0907.4010.</a></li>
+
+</ul>
+
 <p>Happy coding! :)</p>
       </section>
 
